android/build_log_final.txt

> Configure project :app
WARNING: Using flatDir should be avoided because it doesn't support any meta-data formats.

> Configure project :capacitor-cordova-android-plugins
WARNING: Using flatDir should be avoided because it doesn't support any meta-data formats.

> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :capacitor-android:preBuild UP-TO-DATE
> Task :capacitor-android:preDebugBuild UP-TO-DATE
> Task :capacitor-android:writeDebugAarMetadata UP-TO-DATE
> Task :capacitor-cordova-android-plugins:preBuild UP-TO-DATE
> Task :capacitor-cordova-android-plugins:preDebugBuild UP-TO-DATE
> Task :capacitor-cordova-android-plugins:writeDebugAarMetadata UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :capacitor-android:processDebugNavigationResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:processDebugNavigationResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :capacitor-android:generateDebugResValues UP-TO-DATE
> Task :capacitor-android:generateDebugResources UP-TO-DATE
> Task :capacitor-android:packageDebugResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:generateDebugResValues UP-TO-DATE
> Task :capacitor-cordova-android-plugins:generateDebugResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:packageDebugResources UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-android:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-android:processDebugManifest UP-TO-DATE
> Task :capacitor-cordova-android-plugins:extractDeepLinksDebug UP-TO-DATE
> Task :capacitor-cordova-android-plugins:processDebugManifest UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :capacitor-android:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-android:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-android:generateDebugRFile UP-TO-DATE
> Task :capacitor-cordova-android-plugins:compileDebugLibraryResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:parseDebugLocalResources UP-TO-DATE
> Task :capacitor-cordova-android-plugins:generateDebugRFile UP-TO-DATE
> Task :capacitor-android:javaPreCompileDebug UP-TO-DATE
> Task :app:processDebugResources

> Task :capacitor-android:compileDebugJavaWithJavac
C:\Users\MotoCraft\.gemini\antigravity\scratch\moto-asistan\node_modules\@capacitor\android\capacitor\src\main\java\com\getcapacitor\plugin\SystemBars.java:150: error: cannot find symbol
        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.VANILLA_ICE_CREAM && insetHandlingEnabled) {
                                                        ^
  symbol:   variable VANILLA_ICE_CREAM
  location: class VERSION_CODES
C:\Users\MotoCraft\.gemini\antigravity\scratch\moto-asistan\node_modules\@capacitor\android\capacitor\src\main\java\com\getcapacitor\plugin\SystemBars.java:161: error: cannot find symbol
        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.VANILLA_ICE_CREAM && insetHandlingEnabled) {
                                                        ^
  symbol:   variable VANILLA_ICE_CREAM
  location: class VERSION_CODES
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors

> Task :capacitor-android:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/MotoCraft/.gemini/antigravity/scratch/moto-asistan/android/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':capacitor-android:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  C:\Users\MotoCraft\.gemini\antigravity\scratch\moto-asistan\node_modules\@capacitor\android\capacitor\src\main\java\com\getcapacitor\plugin\SystemBars.java:150: error: cannot find symbol
          if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.VANILLA_ICE_CREAM && insetHandlingEnabled) {
                                                          ^
    symbol:   variable VANILLA_ICE_CREAM
    location: class VERSION_CODES
  C:\Users\MotoCraft\.gemini\antigravity\scratch\moto-asistan\node_modules\@capacitor\android\capacitor\src\main\java\com\getcapacitor\plugin\SystemBars.java:161: error: cannot find symbol
          if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.VANILLA_ICE_CREAM && insetHandlingEnabled) {
                                                          ^
    symbol:   variable VANILLA_ICE_CREAM
    location: class VERSION_CODES
  Note: Recompile with -Xlint:unchecked for details.
  Note: Some input files use unchecked or unsafe operations.
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights.

BUILD FAILED in 6s
38 actionable tasks: 2 executed, 36 up-to-date
